# release-tools

./: .gitignore  .gitreview  .testr.conf  README.rst  aclmanager.py  add_comment.py  adjust_blueprints.py  annotate-lp-bugs.py  announce.sh  autokick.py  bindep.txt  bug_cleanup.py  bugs-fixed-since.py  check_library_constraints.sh  close_milestone.py  compare_tarball_diff.sh  consolidate_release_page.py  create_milestones.py  create_milestones.sample.yaml  ensure_milestone.py  eol_branch.sh  expire_old_bug_reports.py  functions  get-lp-links.py  get_project_for_repo.py  inactive_project_report.sh  intermediary.sh  list_changes_unreleased_deliverables.sh  list_deliverable_changes.py  list_library_unreleased_changes.sh  list_oslo_unreleased_changes.sh  list_repos_by_project.py  list_repos_by_tag.py  list_stable_unreleased_changes.sh  list_unreleased_changes.sh  lp-filter-bugs-by-importance.py  lp-filter-bugs-by-tag.py  lp-reset-backport-potential.py  lp-tag.py  make_driverfixes_branch.sh  (+50 more)
presentations/6-months-in-the-life-of-openstack/: Gruntfile.js  README.rst  index.html  package-lock.json  requirements.txt
presentations/6-months-in-the-life-of-openstack/css/: selectable.css  selectable.scss
presentations/6-months-in-the-life-of-openstack/css/theme/: dhellmann.css
presentations/6-months-in-the-life-of-openstack/css/theme/source/: dhellmann.scss
presentations/6-months-in-the-life-of-openstack/tools/: output.py  showcode.py
presentations/onboarding/: Gruntfile.js  README.rst  index.html  package.json
presentations/onboarding/css/: custom.css
presentations/onboarding/css/theme/: dhellmann.css
presentations/onboarding/css/theme/source/: dhellmann.scss
presentations/onboarding/js/: lineselect.js  reveal.min.js
presentations/onboarding/tools/: showcode.py
releasetools/: gitutils.py  governance.py  launchpadutils.py  release_notes.py  rst2txt.py  semver.py  update_reviews.py
releasetools/cmds/: add_comment.py  batch_create_stable_branches.py  dashboard.py  get_repo_owner.py  latest_deliverable_versions.py  launchpad_login.py  list_deliverable_changes.py  list_repos.py  mail.py  milestone_checkup.py  milestone_close.py  milestone_ensure.py  milestone_rename.py  milestones_create.py  propose_final_releases.py  ptl.py  release_notes.py  sanity_check_version.py  update_reviews.py
releasetools/tests/: test_governance.py  test_semver.py  test_update_reviews.py
tests/: test_sanity_check_version.py
