[metadata]
name = releasetools
summary = OpenStack Release Tools
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    releasetools
    releasetools.cmds

[entry_points]
console_scripts =
    release-notes = releasetools.cmds.release_notes:main
    list-repos = releasetools.cmds.list_repos:main
    get-repo-owner = releasetools.cmds.get_repo_owner:main
    sanity-check-version = releasetools.cmds.sanity_check_version:main
