[metadata]
name = openstack-release-tools
summary = OpenStack Release Tools
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/

classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    releasetools
    releasetools.cmds

[entry_points]
console_scripts =
    release-notes = releasetools.cmds.release_notes:main
    list-repos = releasetools.cmds.list_repos:main
    get-repo-owner = releasetools.cmds.get_repo_owner:main
    sanity-check-version = releasetools.cmds.sanity_check_version:main
    milestone-rename = releasetools.cmds.milestone_rename:main
    milestone-ensure = releasetools.cmds.milestone_ensure:main
    milestone-close = releasetools.cmds.milestone_close:main
    milestones-create = releasetools.cmds.milestones_create:main
    launchpad-login = releasetools.cmds.launchpad_login:main
    send-mail = releasetools.cmds.mail:main
    dashboard = releasetools.cmds.dashboard:main
    batch-stable-branches = releasetools.cmds.batch_create_stable_branches:main
    update-reviews = releasetools.cmds.update_reviews:main
    propose-final-releases = releasetools.cmds.propose_final_releases:main
    latest-deliverable-versions = releasetools.cmds.latest_deliverable_versions:main
